{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 42,
  "lineage": "8fd88590-a112-167c-336c-7e99ded746e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "infra_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828603324:internet-gateway/igw-04576cd56167f03fc",
            "id": "igw-04576cd56167f03fc",
            "owner_id": "084828603324",
            "tags": {
              "Name": "infra-igw"
            },
            "tags_all": {
              "Name": "infra-igw"
            },
            "vpc_id": "vpc-06e7b682082a4f6ef"
          },
          "dependencies": [
            "aws_vpc.infra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "infra_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828603324:route-table/rtb-0a6b058a67097330f",
            "id": "rtb-0a6b058a67097330f",
            "owner_id": "084828603324",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04576cd56167f03fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infra-route-table"
            },
            "tags_all": {
              "Name": "infra-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e7b682082a4f6ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.infra_igw",
            "aws_vpc.infra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "infra_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a52fe0ff53c34f7d",
            "route_table_id": "rtb-0a6b058a67097330f",
            "subnet_id": "subnet-0e09ee291f0b6ff2d"
          },
          "dependencies": [
            "aws_internet_gateway.infra_igw",
            "aws_route_table.infra_route_table",
            "aws_subnet.infra_pb_subnet",
            "aws_vpc.infra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "infra_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828603324:security-group/sg-0f7a484f6a7264f4b",
            "description": "Security group for EC2 instances",
            "egress": [],
            "id": "sg-0f7a484f6a7264f4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 21,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 21
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "infra-sg",
            "name_prefix": "",
            "owner_id": "084828603324",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06e7b682082a4f6ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.infra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "infra_pb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828603324:subnet/subnet-0e09ee291f0b6ff2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e09ee291f0b6ff2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084828603324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-pb-subnet"
            },
            "tags_all": {
              "Name": "infra-pb-subnet"
            },
            "vpc_id": "vpc-06e7b682082a4f6ef"
          },
          "dependencies": [
            "aws_vpc.infra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "infra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828603324:vpc/vpc-06e7b682082a4f6ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ea161c68a6a4d6b4",
            "default_route_table_id": "rtb-01fe976c2575d7ca1",
            "default_security_group_id": "sg-07447c8330cae5150",
            "dhcp_options_id": "dopt-086627fd694fa8263",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06e7b682082a4f6ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01fe976c2575d7ca1",
            "owner_id": "084828603324",
            "tags": {
              "Name": "infra-vpc"
            },
            "tags_all": {
              "Name": "infra-vpc"
            }
          }
        }
      ]
    }
  ]
}